can now select boxes (the total selected amount is sent to the fraction-container

--- a/client/src/components/Fraction/FractionBlock/style.css
+++ b/client/src/components/Fraction/FractionBlock/style.css
@@ -5,6 +5,10 @@
 .shown{
     border: 1px black solid;
 }
+.selected {
+    background-color: blue;
+}
+
 .col-12 .col-4 .col-6 [class*="col-"]{
     margin: 0px;
     padding-right: 0px !important;
