have working image division

--- a/client/src/components/Fraction/FractionBlock/style.css
+++ b/client/src/components/Fraction/FractionBlock/style.css
@@ -1,7 +1,7 @@
 .fraction-block {
     margin: 0px;
     border:none;
-    /* background-image: url("/images/mountain.jpg"); */
+    background-image: url("/images/mountain.jpg");
     background-size: 500px;
 }
 .shown{
