block working with buttons rather than prompt

--- a/client/src/components/Fraction/FractionBlock/style.css
+++ b/client/src/components/Fraction/FractionBlock/style.css
@@ -30,3 +30,13 @@ p {
     text-align : center;
     margin: auto;
 }
+
+/* buttons */
+
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
