--- a/client/src/components/AlperComponents/CardBtn/CardBtn.css
+++ b/client/src/components/AlperComponents/CardBtn/CardBtn.css
@@ -10,6 +10,7 @@
   cursor: pointer;
   font-family: FontAwesome;
   outline: none;
+  background:#35ceb5;
 }
 
 .pass {
@@ -23,7 +24,7 @@
 
 .pick {
   right: 1%;
-  background: #43A047;
+  background: #35ceb5;
 }
 
 .pick::after {
