--- a/client/src/components/Fraction/Fraction-Container/style.css
+++ b/client/src/components/Fraction/Fraction-Container/style.css
@@ -1,3 +1,12 @@
 .FractionContainer{
     box-align: center;
 }
+
+.btn-div{
+    margin-top: 10px;
+    text-align: center;
+}
+
+#reset-btn{
+    margin-right: 10px;
+}
