--- a/client/src/components/Fraction/FractionBlock/style.css
+++ b/client/src/components/Fraction/FractionBlock/style.css
@@ -1,5 +1,6 @@
 .fraction-block {
-    margin: 0px;
+    margin: 0 auto;
+    margin-top: 15px;
     border:none;
     /* background-image: url("/images/mountain.jpg"); */
     background-size: 500px;
@@ -40,3 +41,17 @@ p {
 .hide {
     display: none;
 }
+
+/* .fraction-button{
+    color: #fff;
+    background-color: #369;
+    border-color: #369;
+    border: 1px solid transparent;
+    padding: 0.375rem 1rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+} */
