--- a/client/src/components/Fraction/FractionBlock/style.css
+++ b/client/src/components/Fraction/FractionBlock/style.css
@@ -1,6 +1,5 @@
 .fraction-block {
-    margin: 0 auto;
-    margin-top: 15px;
+    margin: 0px;
     border:none;
     /* background-image: url("/images/mountain.jpg"); */
     background-size: 500px;
@@ -41,17 +40,3 @@ p {
 .hide {
     display: none;
 }
-
-/* .fraction-button{
-    color: #fff;
-    background-color: #369;
-    border-color: #369;
-    border: 1px solid transparent;
-    padding: 0.375rem 1rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-} */
