--- a/client/src/components/Fraction/Fraction-Container/style.css
+++ b/client/src/components/Fraction/Fraction-Container/style.css
@@ -6,7 +6,7 @@
 
 .btn-div{
     margin-top: 10px;
-    text-align: center;
+    padding-left: 30%;
 }
 
 #reset-btn{
@@ -20,7 +20,6 @@ h3 {
 }
 
 #fraction-div{
-    margin: 0 auto;
-    margin-top: 15px;
+    padding-left: 25%;
 }
 
