--- a/client/src/components/QuestionGenerator/questionStyle.css
+++ b/client/src/components/QuestionGenerator/questionStyle.css
@@ -19,3 +19,45 @@
     margin-top: 25%;
     margin-left: 25%;
 }
+
+#question{
+    background-color: rgba(275, 275, 275, .65);  
+    backdrop-filter: blur(10px);
+    border-radius: 25px;
+    padding: 2%;
+    padding-left: 4%;
+    margin-right: 30%;
+  
+}
+
+h4{
+    color: navy;
+    size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#Evaluate{
+    text-align: center;
+    color: navy;
+    font-weight: bold;
+}
+
+.form-check{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+#question-submit{
+    align-content: center
+
+}
+
+#question-next{
+    align-content: center
+}
+
+.question-buttons{
+    padding-left: 20%;
+}
+
