buttons showing when div is small and can click on fraction number to get buttons to show

--- a/client/src/components/Fraction/pieces-button/style.css
+++ b/client/src/components/Fraction/pieces-button/style.css
@@ -1,5 +1,10 @@
 .show {
     display: block;
+    /* position:relative;
+    bottom: -0%; */
+    overflow:visible;
+    z-index: 5;
+    width: 500px;
 }
 
 .hide {
