--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -19,7 +19,9 @@ ul li {
 }
 
 ul li:hover {
-  background: #000000;
+  background-color: rgba(275, 275, 275, .25);  
+  backdrop-filter: blur(10px);
+  border-radius: 25px;
 }
 
 
