--- a/client/src/components/AlperComponents/Card/card.css
+++ b/client/src/components/AlperComponents/Card/card.css
@@ -1,3 +1,11 @@
 /* .card-header{
     background: url('../../../../public/images/logo.PNG')
 } */
+
+.card-img-top{
+    background-color: #f4654e;
+}
+
+.card-header{
+    background-color: #f4654e;
+}
