--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -32,10 +32,15 @@ ul li:hover {
 
 #nav-items{
   float: right;
-  font-size: 15px;
+  font-size: 17px;
   text-align: right;
-  padding-left: 25%;
+  padding-left: 20%;
   padding-right: 5px;
+}
+
+.navbar{
+  background-color: #f4654e;
+  opacity: .95;
 }
 
 
