--- a/client/src/components/QuestionGenerator/questionStyle.css
+++ b/client/src/components/QuestionGenerator/questionStyle.css
@@ -8,12 +8,27 @@
 }
 
 #start{
-    background-color: #EB6864;
+    background-color: #f4654e;
     color: white;
-    height: 100px;
+    height: 200px;
     width: 200px;
     font-size: 30px;
+    position: relative;
+    border: none;
+    box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
+    border-radius: 50%;
+    cursor: pointer;
+    -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+     animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+     opacity: .95;
 }
+
+    @-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
+    @-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
+    @-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
+    @keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}    
 
 #buttons{
     margin-top: 25%;
@@ -34,7 +49,7 @@
     padding-top: 2%;
     text-align: center;
     font-weight: bolder;
-    color: #EB6864;
+    color: #f4654e;
     font-style: italic;
     font-size: 25px;
   
