--- a/client/src/components/Fraction/Fraction-Container/style.css
+++ b/client/src/components/Fraction/Fraction-Container/style.css
@@ -10,6 +10,7 @@
     border-radius: 25px;
     width: 500px;
     padding-left: 5%;
+    text-align: center;
 }
 
 #reset-btn{
@@ -19,7 +20,7 @@
 h3 {
     color: navy;
     font-size: 35px;
-    padding-left: 40%;
+    padding-top: 2%;
 }
 
 #fraction-div{
