--- a/client/src/components/Fraction/Fraction-Container/style.css
+++ b/client/src/components/Fraction/Fraction-Container/style.css
@@ -4,13 +4,14 @@
 
 .btn-div{
     margin-top: 10px;
-    padding-top: 7%;
+    padding-top: 5%;
     background-color: rgba(275, 275, 275, .65);  
     backdrop-filter: blur(10px);
     border-radius: 25px;
     width: 500px;
     padding-left: 5%;
     text-align: center;
+    padding-bottom: 3%;
 }
 
 #reset-btn{
@@ -21,6 +22,7 @@ h3 {
     color: navy;
     font-size: 35px;
     padding-top: 2%;
+    
 }
 
 #fraction-div{
