added new image and other level images added to folder

--- a/client/src/components/Fraction/FractionBlock/style.css
+++ b/client/src/components/Fraction/FractionBlock/style.css
@@ -2,9 +2,10 @@
     margin: 0px;
     border:none;
     /* background-image: url("/images/mountain.jpg"); */
-    background-size: 500px;
+    /* background-size: 500px; */
     /* visibility : hidden; */
     /* opacity:.45; */
+
 }
 .shown{
     border: 1px black solid;
