--- a/client/src/components/Fraction/Multiply-Slider/style.css
+++ b/client/src/components/Fraction/Multiply-Slider/style.css
@@ -16,14 +16,27 @@
     width: 25px;
     height: 25px;
     border-radius: 50%; 
-    background: #4CAF50;
+    background: navy;
     cursor: pointer;
   }
   
   #multiply-slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
-    background: #4CAF50;
+    background: navy;
     cursor: pointer;
+  }
+
+  #multiply-slider{
+    width: 500px;
+    margin-top: 3%;
+  }
+
+  .slidecontainer{
+    margin-top: 3%;
+    font-family: "News Cycle", "Arial Narrow Bold", sans-serif;
+    color: white;
+    font-weight: bolder;
+    font-size: 25px;
   }
