--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,4 +8,9 @@ body {
   background-size: cover;
 }
 
+.jumbotron{
+  text-align: center;
+  background-color: rgba(275, 275, 275, .65);  
+  backdrop-filter: blur(10px);
+}
 
