--- a/client/src/pages/ClassManagement/class.css
+++ b/client/src/pages/ClassManagement/class.css
@@ -4,14 +4,14 @@ article {
     border-radius: 15px;
     padding:15px;
     padding-left: 10%;
-    color: navy;
+    color: #12134f;
 }
 
 
-.managment-row{
+.row{
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-  
+    vertical-align: middle;
 }
